# gvars

./: .gitignore  Cargo.toml  README.md
macro/: Cargo.toml
src/: disabled.rs  enabled.rs  lib.rs
src/gvars/: Cargo.toml
src/gvars-macro/src/: lib.rs
src/gvars/src/: enabled.rs  lib.rs
src/gvars/tests/: basic.rs
tests/: basic.rs
