[package]
name = "gvars"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["macro"]

[dependencies]
cfg-if = "1.0"
lazy_static = { version = "1.0", optional = true }
linkme = { version = "0.2", optional = true }
ron = { version = "0.6", optional = true }
serde = "1.0"

gvars-macro = { path = "./macro", version = "0.1.0"}

[features]
# Enable when `cfg!(debug_assertions)` is true
enable-for-debug = ["lazy_static", "linkme", "ron"]
# Enable regardless of `cfg!(debug_assertions)`
enable-always = ["enable-for-debug"]