[package]
name = "gvars"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["macro"]

[dependencies]
cfg-if = "1.0"
lazy_static = { version = "1.0", optional = true }
ctor = { version = "0.1", optional = true }

gvars-macro = { path = "./macro", version = "0.1"}

[features]
# Enable when `cfg!(debug_assertions)` is true
enable-for-debug = ["lazy_static", "ctor"]
# Enable regardless of `cfg!(debug_assertions)`
enable-always = ["enable-for-debug"]

default = ["enable-for-debug"]